--- a/index.html
+++ b/index.html
@@ -2,43 +2,41 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Tom Kilburn - Early Computing Pioneer</title>
+    <title>Gordon Moore and Moore's Law</title>
     <link href="style1.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="header">
       <div id="sitebranding">
-        <h1>Tom Kilburn</h1>
+        <h1>Gordon Moore</h1>
       </div>
       <div id="tagline">
-        <p>Early Computing Pioneer</p>
+        <p>The Tale of Computer Optimization</p>
       </div>
     </div>
     <!-- end of header div -->
     <div id="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="quotes.html">Quotes</a></li>
-        <li><a href="references.html">References</a></li>
+        <li><a href="impact.html">Impact</a></li>
+        <li><a href="perspective.html">Perspective</a></li>
       </ul>
     </div>
     <!-- end of navigation div -->
     <div id="bodycontent">
-      <h2>The life of Tom Kilburn</h2>
-      <p><img src="Tom%20Kilburn.png" alt="Tom Kilburn sitting in front of the Manchester Mark 1"
-
-          height="315" width="413"></p>
-      <p class="list">Born in 1921 in Dewsbury, England.</p>
-      <p class="list">Graduated from Cambridge with a degree in mathematics and Manchester
-        with a PhD and a DSc in Computer Research.</p>
-      <p class="list">Join the military during WWII, doing telecommunications research.</p>
-      <p class="list">After the war, he worked on several computer projects of historical
-        importance, including Manchester's "Baby", Mark 1, Mark II, Atlas, and
-        MU5.</p>
-      <p class="list">Helped establish the first Department of Computer Science at
-        Manchester, serving as its department head.</p>
-      <p class="list">Retired in 1981, continuing to server as professor emeritus.</p>
-      <p class="list">Died Jan. 17, 2001 .</p>
+      <h2>Who is Gordon Moore?</h2>
+      <p><img src="Gordon%20Moore.jpg" alt="Portrait of Gordon Moore" height="400"
+          width="400"></p>
+      <p class="list">Gordon Moore is one of the co-founders of the Intel
+        Corporation in 1968. In 1965, Moore would become famous for his
+        predictions on the increasing efficiency of printed circuits.</p>
+      <p class="list">In April 1965,Gordon Moore published a paper in
+        Electronics magazine entitled "Cramming more components onto integrated
+        circuits". Moore had noticed that microchip capacity was doubling every
+        year and predicted the trend would continue for another ten years. In
+        1975 Moore revised his prediction to doubling every 18 to 24 months.
+        That rate of increase would later became known as Moore's Law, named
+        after him.</p>
     </div>
     <!-- end of bodycontent div -->
   </body>
